--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
           path: build/${{ matrix.targetPlatform }}
       - uses: mr-smithers-excellent/docker-build-push@v5
         with:
-          image: docker-hub-repo/image-name
+          image: "docker-hub-repo/image-name"
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
